# tinyqoi

./: Cargo.toml  README.md  README.tpl  justfile
.github/workflows/: ci.yml
examples/: display.rs
src/: lib.rs
tests/: colors.qoi
