[package]
name = "tinyqoi"
description = "QOI image decoder for embedded applications"
version = "0.2.0"
authors = ["Ralf Fuest <mail@rfuest.de>"]
edition = "2021"
repository = "https://github.com/embedded-graphics/tinyqoi"
categories = ["embedded", "no-std", "multimedia::images"]
keywords = ["graphics", "embedded-graphics", "qoi", "bitmap", "image"]
license = "MIT OR Apache-2.0"
include = [ "LICENSE-*", "README.md", "/src/" ]

[dependencies]
embedded-graphics = "0.8.0"

[dev-dependencies]
clap = { version = "3.0.7", features = ["derive"] }
embedded-graphics-simulator = "0.5.0"
